improving auth0 and navigation

--- a/todo.txt
+++ b/todo.txt
@@ -2,6 +2,8 @@
 add test
 add 404 page
 add auth loader
+add nice login/logout button page
+change login page
 
 // ideas
 add backend for all words and translation
