--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,10 @@
 
 add test
 add 404 page
-add auth loader
 add nice login/logout button page
 change login page
+
+//fix error
 
 // ideas
 add backend for all words and translation
