--- a/todo.txt
+++ b/todo.txt
@@ -5,6 +5,7 @@ create api types and use those
 delete function types
 fix vetur or have ok plugin
 add loader to dashboard ? suspense?
+add new pages somewhere to menu
 
 // ideas
 add backend for all words and translation
