--- a/todo.txt
+++ b/todo.txt
@@ -6,6 +6,7 @@ delete function types
 fix vetur or have ok plugin
 add loader to dashboard ? suspense?
 add new pages somewhere to menu
+success message
 
 // ideas
 add backend for all words and translation
